build.log
    Updating crates.io index
warning: failed to write cache, path: /opt/rust/cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ma/tc/matchit, error: Permission denied (os error 13)
   Compiling netlink-packet-utils v0.5.2
   Compiling rand v0.8.5
   Compiling sha1 v0.10.6
   Compiling futures-executor v0.3.31
   Compiling memoffset v0.9.1
   Compiling inout v0.1.4
   Compiling enumflags2_derive v0.7.12
   Compiling percent-encoding v2.3.2
   Compiling vcpkg v0.2.15
   Compiling utf8parse v0.2.2
   Compiling unicase v2.8.1
   Compiling async-task v4.7.1
   Compiling httpdate v1.0.3
   Compiling thiserror v2.0.17
   Compiling mime v0.3.17
   Compiling pkg-config v0.3.32
   Compiling rustversion v1.0.22
   Compiling cfg_aliases v0.2.1
   Compiling linux-raw-sys v0.11.0
   Compiling nix v0.29.0
   Compiling mime_guess v2.0.5
   Compiling enumflags2 v0.7.12
   Compiling anstyle-parse v0.2.7
   Compiling cipher v0.4.4
   Compiling libsqlite3-sys v0.30.1
   Compiling netlink-packet-core v0.7.0
   Compiling futures v0.3.31
   Compiling ahash v0.8.12
   Compiling zvariant_derive v4.2.0
   Compiling async-channel v2.5.0
   Compiling http-body-util v0.1.3
   Compiling piper v0.2.4
   Compiling num-traits v0.2.19
   Compiling async-io v2.6.0
   Compiling universal-hash v0.5.1
   Compiling thiserror-impl v2.0.17
   Compiling async-trait v0.1.89
   Compiling is_terminal_polyfill v1.70.1
   Compiling endi v1.1.0
   Compiling opaque-debug v0.3.1
   Compiling static_assertions v1.1.0
   Compiling data-encoding v2.9.0
   Compiling rustix v1.1.2
   Compiling serde_json v1.0.145
   Compiling anstyle-query v1.1.4
   Compiling rustix v0.38.44
   Compiling anstyle v1.0.13
   Compiling utf-8 v0.7.6
   Compiling ryu v1.0.20
   Compiling colorchoice v1.0.4
   Compiling sync_wrapper v1.0.2
   Compiling anstream v0.6.21
   Compiling tungstenite v0.24.0
   Compiling zvariant v4.2.0
   Compiling polyval v0.6.2
   Compiling blocking v1.6.2
   Compiling polling v3.11.0
   Compiling hashbrown v0.14.5
   Compiling netlink-sys v0.8.7
   Compiling hyper v1.7.0
   Compiling form_urlencoded v1.2.2
   Compiling async-lock v3.4.1
   Compiling strsim v0.11.1
   Compiling heck v0.5.0
   Compiling lazy_static v1.5.0
   Compiling base64ct v1.7.3
   Compiling linux-raw-sys v0.4.15
   Compiling clap_lex v0.7.6
   Compiling clap_builder v4.5.49
   Compiling password-hash v0.5.0
   Compiling sharded-slab v0.1.7
   Compiling clap_derive v4.5.49
   Compiling async-fs v2.2.0
   Compiling serde_urlencoded v0.7.1
   Compiling hyper-util v0.1.17
   Compiling axum-core v0.4.5
   Compiling hashlink v0.9.1
   Compiling netlink-proto v0.11.5
   Compiling zbus_names v3.0.0
   Compiling ghash v0.5.1
   Compiling tokio-tungstenite v0.24.0
   Compiling tower v0.5.2
   Compiling netlink-packet-route v0.19.0
   Compiling ctr v0.9.2
   Compiling aes v0.8.4
   Compiling async-executor v1.13.3
   Compiling matchers v0.2.0
   Compiling regex v1.12.2
   Compiling zbus_macros v4.4.0
   Compiling async-broadcast v0.7.2
   Compiling blake2 v0.10.6
   Compiling tracing-log v0.2.0
   Compiling nix v0.27.1
   Compiling tokio-util v0.7.16
   Compiling serde_path_to_error v0.1.20
   Compiling aead v0.5.2
   Compiling serde_repr v0.1.20
   Compiling ordered-stream v0.2.0
   Compiling xdg-home v1.3.0
   Compiling is-terminal v0.4.17
   Compiling thread_local v1.1.9
   Compiling fallible-streaming-iterator v0.1.9
   Compiling base64 v0.22.1
   Compiling http-range-header v0.4.2
   Compiling termcolor v1.4.1
   Compiling matchit v0.7.3
   Compiling fallible-iterator v0.3.0
   Compiling hex v0.4.3
   Compiling nu-ansi-term v0.50.3
   Compiling iana-time-zone v0.1.64
   Compiling humantime v2.3.0
   Compiling chrono v0.4.42
   Compiling env_logger v0.10.2
   Compiling tracing-subscriber v0.3.20
   Compiling zbus v4.4.0
   Compiling axum v0.7.9
   Compiling tower-http v0.5.2
   Compiling rtnetlink v0.14.1
   Compiling aes-gcm v0.10.3
   Compiling argon2 v0.5.3
   Compiling clap v4.5.49
   Compiling gethostname v0.5.0
   Compiling tower v0.4.13
   Compiling bincode v1.3.3
   Compiling sha2 v0.10.9
   Compiling num_cpus v1.17.0
   Compiling md5 v0.7.0
   Compiling rusqlite v0.32.1
   Compiling op-dbus v0.1.0 (/git/operation-dbus)
warning: unused import: `tokio::time`
 --> src/native/ovsdb_jsonrpc.rs:5:5
  |
5 | use tokio::time;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `data`
   --> src/state/manager.rs:225:25
    |
225 |                     let data = serde_json::json!({
    |                         ^^^^ help: if this is intentional, prefix it with an underscore: `_data`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `data`
   --> src/state/manager.rs:267:25
    |
267 |                     let data = serde_json::json!({
    |                         ^^^^ help: if this is intentional, prefix it with an underscore: `_data`

warning: unused variable: `data`
   --> src/state/manager.rs:285:25
    |
285 |                     let data = serde_json::json!({
    |                         ^^^^ help: if this is intentional, prefix it with an underscore: `_data`

warning: field `current_node_index` is never read
  --> src/cache/btrfs_cache.rs:63:5
   |
55 | pub struct BtrfsCache {
   |            ---------- field in this struct
...
63 |     current_node_index: std::sync::atomic::AtomicUsize,
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: method `record_footprint` is never used
  --> src/state/manager.rs:65:8
   |
47 | impl StateManager {
   | ----------------- method in this implementation
...
65 |     fn record_footprint(&self, plugin: &str, operation: &str, data: serde_json::Value) {
   |        ^^^^^^^^^^^^^^^^

warning: `op-dbus` (lib) generated 6 warnings (run `cargo fix --lib -p op-dbus` to apply 1 suggestion)
error[E0425]: cannot find value `limit` in this scope
   --> src/main.rs:976:25
    |
976 |             let limit = limit.unwrap_or(10);
    |                         ^^^^^ not found in this scope

warning: unused import: `streaming_blockchain::StreamingBlockchain`
 --> src/blockchain/mod.rs:6:9
  |
6 | pub use streaming_blockchain::StreamingBlockchain;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tokio::time`
 --> src/native/ovsdb_jsonrpc.rs:5:5
  |
5 | use tokio::time;
  |     ^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src/main.rs:326:9
    |
326 |     let mut sm = state::StateManager::new();
    |         ----^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `op-dbus` (bin "op-dbus") generated 6 warnings (3 duplicates)
error: could not compile `op-dbus` (bin "op-dbus") due to 1 previous error; 6 warnings emitted
